# simple-fb2-reader

./: .cproject  .project  AUTHORS  CMakeLists.txt  INSTALL  Makefile  NEWS  README  README.md  README.md~  build_gui  configure  configure.ac  cppcheck_start.sh  gmon.out  makefile  makefile.in  pre-build-Debug  simple-fb2-reader.desktop  simple-fb2-reader.glade  valgrind_test.txt
Debug/: gmon.out  makefile  objects.mk  simple-fb2-reader  sources.mk
Debug/src/: book_io.d  book_open.d  init_global_obj.d  main.d  open_new_book.d  subdir.mk
Debug/src/callbacks/: encode_dialog_callbacks.d  encoding_dialog_callbacks.d  main_wnd_callbacks (2).d  main_wnd_callbacks.d  search_wnd_callbacks.d  subdir.mk  text_view_callback.d
Debug/src/callbacks/context_menu_callbacks/: about_callback.d  backward_callback.d  book_search_callback.d  color_theme_callback.d  encode_callback.d  forget_books_callback.d  navigation_callback.d  navigation_section_callback.d  open_file_callback.d  subdir.mk
Debug/src/callbacks/text_view_callback/: link_tag_enevt_callback.d  motion_event_callback.d  popup_menu_callback.d  scroll_event_callback.d  subdir.mk  tooltip_callback.d
Debug/src/fb2/: book_body.d  function_book.d  subdir.mk
Debug/src/fb2/attributes/: subdir.mk
Debug/src/fb2/binary/: binary.d  subdir.mk
Debug/src/fb2/body/: annotation.d  book_body.d  cite (2).d  cite.d  date.d  epigraph.d  formated_text.d  image.d  link.d  poem.d  section.d  style.d  subdir.mk  subtitle.d  table.d  text_autor.d  title.d
Debug/src/fb2/description/: description.d  subdir.mk
Debug/src/fb2_zip/: subdir.mk
Debug/src/formats/fb2/: fb2_parser.d  fiction_book.d  subdir.mk
Debug/src/formats/fb2_zip/: fb2_zip_parser.d  subdir.mk
Debug/src/formats/txt/: subdir.mk  txt_parser.d
Debug/src/init/: init_app_config.d  init_config_folder.d  init_dialogs.d  init_main_book_view.d  init_main_text_view.d  init_main_wnd.d  init_text_tags.d  subdir.mk
Debug/src/reader/: reader_book_config.d  reader_close_app.d  reader_close_book.d  reader_color_theme.d  reader_open_book.d  reader_scroll.d  subdir.mk
Debug/src/txt/: encodings.d  subdir.mk  txt_parser.d
Release/: makefile  objects.mk  simple-fb2-reader  sources.mk
Release/src/: fb2_reader.d  main.d  reader.d  subdir.mk
Release/src/callbacks/: subdir.mk  text_view_callback.d
Release/src/fb2/: body.d  function_book.d  subdir.mk
Release/src/fb2/attributes/: id.d  subdir.mk
Release/src/fb2/binary/: binary.d  subdir.mk
Release/src/fb2/body/: date.d  (+8 more)
Release/src/init/: init_dialogs.d  subdir.mk
Release/src/txt/: subdir.mk
autoconf/: configure  configure.ac  makefile.in
autom4te.cache/: output.0  requests  traces.0
debian/: changelog  control  copyright  dirs  install  postinst  postrm  simple-fb2-reader.links
gui/: simple-fb2-reader.glade
intl/: compile.sh  en_US.po  en_US.po~  localize.sh  prepare.sh  ru.po  ru.po~  simple-fb2-reader.pot
intl/mo/en_US/: simple-fb2-reader.mo
intl/mo/ru/: simple-fb2-reader.mo
intl/ru/: simple-fb2-reader.mo
res/: simple-fb2-reader.css  simple-fb2-reader.desktop  simple-fb2-reader.glade  simple-fb2-reader.xml  simple-fb2-reader_encoding_list.cfg
resources/: simple-fb2-reader.desktop
slackbuild/: simple-fb2-reader.SlackBuild  simple-fb2-reader.info  slack-desc
src/: book_open.c  chunks.h  config.h  config.h.in  init_global_obj.c  main.c  open_new_book.c  reader.c  reader_errors.h
src/callbacks/: callbacks_chunk.h  encode_dialog_callbacks.c  encoding_dialog_callbacks.c  main_wnd_callbacks.c  search_wnd_callbacks.c  text_view_callback.c
src/callbacks/context_menu_callbacks/: about_callback.c  auto_scroll_callback.c  backward_callback.c  book_search_callback.c  close_book_callback.c  color_theme_callback.c  encode_callback.c  exit_callback.c  forget_books_callback.c  navigation_callback.c  navigation_section_callback.c  open_file_callback.c
src/callbacks/menubar_callbacks/: about_callback.c  book_color_theme_callback.c  book_navigation_callback.c  book_navigation_section_callback.c  book_position_callback.c  book_search_callback.c  encode_callback.c  file_open_callback.c  reader_about_callback.c  reader_color_theme_callback.c  reader_forget_books_callback.c
src/callbacks/text_view_callback/: link_tag_enevt_callback.c  motion_event_callback.c  popup_menu_callback.c  scroll_event._callback.c  scroll_event_callback.c  tooltip_callback.c
src/fb2/: body.c  book_body.c  description.c  fb2_chunks.h  fb2_parser.c  function_book.c
src/fb2/FictionBook/: FictionBook_chunks.h  body.c  description.c
src/fb2/attributes/: body_name.c  id.c
src/fb2/binary/: binary.c
src/fb2/body/: a.c  annotation.c  body_chunks.h  book_body.c  cite.c  date.c  empty_line.c  epigraph.c  formated_text.c  image (2).c  image.c  link.c  p.c  poem.c  section.c  style.c  subtitle.c  table.c  text_autor.c  title.c
src/fb2/description/: annotation.c  book_title.c  coverpage.c  description.c  description_chunks.h  title-info.c
src/fb2_zip/: fb2_zip_chunks.h  fb2_zip_parser.c
src/formats/: formats_chunks.h
src/formats/fb2/: fb2_chunks.h  fb2_parser.c  fiction_book.c
src/formats/fb2_zip/: fb2_zip_chunks.h  fb2_zip_parser.c
src/formats/txt/: txt_chunks.h  txt_parser.c
src/init/: init_app.c  init_app_comfog.c  init_app_config.c  init_config_folder.c  init_dialogs.c  init_main_book_view.c  init_main_text_view (2).c  init_main_text_view.c  init_main_wnd (2).c  init_main_wnd.c  init_text_tags.c
src/reader/: reader_book_config.c  reader_book_hash.c  reader_books_db.c  reader_chunks.h  reader_close_app.c  reader_close_book.c  reader_color_theme.c  reader_config.c  reader_error.c  reader_gui.c  reader_open_book.c  reader_scroll.c  reader_search_wnd.c  reader_start_screen.c  reader_text_tags.c
src/reader/reader_app/: reader_app.h  reader_app_config.c  reader_app_gui.c  reader_close_app.c  reader_search_wnd.c
src/reader/reader_book/: reader_add_book_to_start_screen.c  reader_book_chunks.h  reader_book_hash.c  reader_books_db.c  reader_close_book.c  reader_open_book.c
src/txt/: encodings.c  txt_chunks.h  txt_parser.c  txt_parser.h
(+131 files in other folders)
